@@ -4,7 +4,11 @@ import java.util.List;
 
 class LoxFunction implements LoxCallable {
   private final Stmt.Function declaration;
-  LoxFunction(Stmt.Function declaration) {
+  private final Environment closure;
+
+  LoxFunction(Stmt.Function declaration, Environment closure) {
+    this.closure = closure;
+
     this.declaration = declaration;
   }
 
@@ -20,7 +24,7 @@ class LoxFunction implements LoxCallable {
 
   @Override
   public Object call(Interpreter interpreter, List<Object> arguments) {
-    Environment environment = new Environment(interpreter.globals);
+    Environment environment = new Environment(closure);
     for (int i = 0; i < declaration.params.size(); i++) {
       environment.define(declaration.params.get(i).lexeme,
           arguments.get(i));
